# ML_chess

./: README.md  elo_test.py  pyproject.toml
chess_engine/: __init__.py  attack_tables.py  bitboard.py  board.py  constants.py  engine.py  evaluator.py  fen.py  move.py  movegen.py  perft.py  search.py  server.py  tt.py  zobrist.py
chess_engine/nn/: __init__.py  features.py  model.py  weights.npz
chess_engine/static/: index.html
tests/: test_bitboard.py  test_evaluator.py  test_fen.py  test_movegen.py  test_nn_evaluator.py  test_perft.py  test_search.py
training/: best_checkpoint.pt  config.py  download_data.py  parse_data.py  train.py
